calendar/css/style.css
/**
 * Copyright (c) 2011 Georg Ehrke <ownclouddev at georgswebsite dot de>
 * This file is licensed under the Affero General Public License version 3 or
 * later.
 * See the COPYING-README file.
 */

#view { float: left; font-size: 12px; height: 100%;}
#datecontrol {text-align: center;}
#datecontrol_left{font-size: 12px;}
#datecontrol_right{font-size: 12px;}
#datecontrol_date_label {margin: 0; padding: 0; font-size: 12px;}
#choosecalendar {margin-right: 170px; float: right; font-size: 12px;}

#choosecalendar_dialog {display: none;}
#newentry_dialog {display: none;}
#editentry_dialog {display: none;}
#parsingfail_dialog{display: none;}

#loading { display: none;margin: 0;padding:0;margin-top:5px;}

#fullcalendar {position: relative;bottom: 0; right: 0; left: 0; top: 3em;}
.fc-content{padding:2px 4px;}
#listview {margin: 0; padding: 10px; background: #EEEEEE;}
#listview #more_before, #listview #more_after {border: 1px solid #1a1a1a; width:25em;padding: 3px;text-align: center;}
#listview #events {width:25em;padding: 4px;}
#listview #events .day {width:auto;padding-left:10px;border-bottom: 2px solid #EEEEEE;text-align:left;}

.actions {height: 33px;	min-width: 800px;}
.controls {min-width: 800px;}
#controls button, #controls input { max-height: 26px; padding: 5px; }
.center {text-align: center;}
.dateinfo {height: 20px;width: 100%; overflow: hidden; margin-top: 0; padding: 0; font-size: 12px;background: #F7F7F7;}
.events {width: 100%; margin: 0; padding: 0;min-height: 100px;}
.calendar_row {height: 20px; text-align: center;background: #ffffff;}
#oneweekview .calendar_row {width: 13.5%;}
.calendar_time {height: 20px; width: 50px; text-align:right;background: #ffffff;}
.day {text-align: center; background: #ffffff; margin: 0; padding: 0; vertical-align: top; width: 14%; height: 22%;}
.weekend {background: #F3F3F3; }
.weekend_thead, .weekend_row{height: 20px;text-align: center;text-align: center;background: #F3F3F3;}
.thisday{background: #FFFABC;}
.event {position:relative;}
.event.colored {border-bottom: 1px solid white;}

input[type="button"].active {color: #6193CF}
#fromtime, #totime {
color:#333;
}
#fromtime.disabled, #totime.disabled {
color:#A9A9A9;
}
select#category{width:140px;}
button.category{margin:0 3px;}

.calendar-colorpicker-color{display:inline-block;width:20px;height:20px;margin-right:2px;cursor:pointer;border:2px solid transparent;}
.calendar-colorpicker-color.active{border:2px solid black;}

#event {padding: 0;margin: 0;margin-top:-5px}

.sharedby li .shareactions { float: right; }
.sharedby li > .shareactions > * { display: none; }
.sharedby li:hover > .shareactions > * { display: inline-block; }

.fc-list-table
{
    margin: 10px;
    border-style: hidden;
    border-width: 10px;
    padding: 10px;
    vertical-align: top;
    width: 100%;
}
.fc-list-table tr:hover
{
    color: #0000FF;
    background-color: #CCFFCC;
}


.fc-list-date
{
    margin: 16px;
    white-space: nowrap;
    text-align: left;
    width: 100%;
    background-color: #808080;
    color: #FFFFFF;
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
}
.fc-list-time
{
    text-align: center;
    white-space: nowrap;
    width: 1%;
}

.fc-list-event
{
     text-align: left;
}

.fc-list-event .fc-event-title
{
     cursor: pointer;
}
.tipsy-event .tipsy-inner{
background-color:#0098E4;
border:2px solid #1d2d44;
max-width:400px;
padding:0;
}
.tipsy-event .tipsy-arrow-s{
border-top-color:#1d2d44;
}
.tipsy-event .tipsy-arrow-n{
border-bottom-color:#1d2d44;
}
.tipsy-event .summary,
.tipsy-event .timespan,
.tipsy-event .description{
padding:0 8px;
}
.tipsy-event .summary{
background-color:#1d2d44;
font-size:1.2em;
font-weight:bold;
text-align:left;
padding:0 8px 2px;
}
.tipsy-event .description{
line-height:1.2;
margin-bottom:4px;
}

#fullcalendar{
	overflow: scroll;
}

